# LoopSolidNative

./: CMakeLists.txt  README.md
cpp/: loopsolid_native.cpp  loopsolid_native.h  loopsolid_native_wrapper.h
cpp/openvdb/: example_converter.cpp  offset_mesh.cpp  offset_mesh.cpp~
